Separate UI Logics according to Tab functions (Auto/Teach/Manual/Data/ Log).

--- a/OneBody.ui
+++ b/OneBody.ui
@@ -1353,7 +1353,7 @@ background-color: rgb(255, 255, 255);</string>
          <enum>QFrame::Box</enum>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>3</number>
         </property>
         <widget class="QWidget" name="page2">
          <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -4828,7 +4828,7 @@ color: rgb(255, 255, 255);
           </item>
          </layout>
         </widget>
-        <widget class="QWidget" name="page6">
+        <widget class="QWidget" name="autoModeTab">
          <layout class="QVBoxLayout" name="verticalLayout_25">
           <property name="topMargin">
            <number>0</number>
