--- a/OneBody.ui
+++ b/OneBody.ui
@@ -4143,6 +4143,38 @@ color: rgb(255, 255, 255);
               <string notr="true">color: rgb(0, 0, 0);</string>
              </property>
             </widget>
+            <widget class="QPushButton" name="dataCreatetBtn">
+             <property name="geometry">
+              <rect>
+               <x>230</x>
+               <y>100</y>
+               <width>80</width>
+               <height>22</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">color: rgb(0, 0, 0);</string>
+             </property>
+             <property name="text">
+              <string>Create</string>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="dataDelete">
+             <property name="geometry">
+              <rect>
+               <x>320</x>
+               <y>100</y>
+               <width>80</width>
+               <height>22</height>
+              </rect>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">color: rgb(0, 0, 0);</string>
+             </property>
+             <property name="text">
+              <string>Delete</string>
+             </property>
+            </widget>
            </widget>
           </item>
           <item>
