--- a/OneBody.ui
+++ b/OneBody.ui
@@ -65,7 +65,7 @@ background-color: rgb(63, 94, 140);
          <string notr="true">background-color: rgb(255, 255, 255);</string>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="Main_1">
          <layout class="QHBoxLayout" name="horizontalLayout_44">
@@ -1240,17 +1240,50 @@ border-style: solid;</string>
                <widget class="QWidget" name="verticalLayoutWidget">
                 <property name="geometry">
                  <rect>
-                  <x>9</x>
+                  <x>-1</x>
                   <y>-1</y>
-                  <width>1481</width>
-                  <height>711</height>
+                  <width>831</width>
+                  <height>625</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_14">
                  <item>
                   <widget class="QPushButton" name="dataUserLibraryOpenBtn">
+                   <property name="maximumSize">
+                    <size>
+                     <width>16777215</width>
+                     <height>16</height>
+                    </size>
+                   </property>
                    <property name="text">
-                    <string>PushButton</string>
+                    <string>Open Custom Library</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="lbGetNameCheck">
+                   <property name="minimumSize">
+                    <size>
+                     <width>0</width>
+                     <height>557</height>
+                    </size>
+                   </property>
+                   <property name="text">
+                    <string>Get Name Function Check</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="lbRunVisionCheck">
+                   <property name="text">
+                    <string>Run Vision Function Check</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="dataSaveLibraryAsDefaultBtn">
+                   <property name="text">
+                    <string>Save as Default Library</string>
                    </property>
                   </widget>
                  </item>
