--- a/OneBody.ui
+++ b/OneBody.ui
@@ -248,7 +248,7 @@ color: rgb(255, 255, 255);</string>
                    </size>
                   </property>
                   <property name="currentIndex">
-                   <number>0</number>
+                   <number>1</number>
                   </property>
                   <widget class="QWidget" name="pattern">
                    <layout class="QHBoxLayout" name="horizontalLayout_71">
@@ -1237,58 +1237,81 @@ border-style: solid;</string>
                  <height>1079</height>
                 </size>
                </property>
-               <widget class="QWidget" name="verticalLayoutWidget">
-                <property name="geometry">
-                 <rect>
-                  <x>-1</x>
-                  <y>-1</y>
-                  <width>831</width>
-                  <height>625</height>
-                 </rect>
-                </property>
-                <layout class="QVBoxLayout" name="verticalLayout_14">
-                 <item>
-                  <widget class="QPushButton" name="dataUserLibraryOpenBtn">
-                   <property name="maximumSize">
-                    <size>
-                     <width>16777215</width>
-                     <height>16</height>
-                    </size>
-                   </property>
-                   <property name="text">
-                    <string>Open Custom Library</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QLabel" name="lbGetNameCheck">
-                   <property name="minimumSize">
-                    <size>
-                     <width>0</width>
-                     <height>557</height>
-                    </size>
-                   </property>
-                   <property name="text">
-                    <string>Get Name Function Check</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QLabel" name="lbRunVisionCheck">
-                   <property name="text">
-                    <string>Run Vision Function Check</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QPushButton" name="dataSaveLibraryAsDefaultBtn">
-                   <property name="text">
-                    <string>Save as Default Library</string>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
-               </widget>
+               <layout class="QFormLayout" name="formLayout">
+                <item row="1" column="0" colspan="2">
+                 <widget class="QLabel" name="lbGetNameCheck">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>1</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>0</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>Get Name Function Check</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="0" colspan="2">
+                 <widget class="QPushButton" name="dataUserLibraryOpenBtn">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>1</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Roboto Condensed</family>
+                    <pointsize>14</pointsize>
+                    <weight>75</weight>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(64, 129, 193);
+border-width: 1px;
+padding: 5px;
+border-radius: 5px;</string>
+                  </property>
+                  <property name="text">
+                   <string>LIBRARY OPEN(*.so)</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0" colspan="2">
+                 <widget class="QLabel" name="lbRunVisionCheck">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>1</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>Run Vision Function Check</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="0" colspan="2">
+                 <widget class="QPushButton" name="dataSaveLibraryAsDefaultBtn">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>1</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>Save as Default Library</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
               </widget>
              </widget>
             </item>
@@ -1421,7 +1444,7 @@ background-color: rgb(255, 255, 255);</string>
          <enum>QFrame::Box</enum>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="page2">
          <layout class="QVBoxLayout" name="verticalLayout_12">
