--- a/OneBody.ui
+++ b/OneBody.ui
@@ -1444,7 +1444,7 @@ background-color: rgb(255, 255, 255);</string>
          <enum>QFrame::Box</enum>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="page2">
          <layout class="QVBoxLayout" name="verticalLayout_12">
@@ -2173,8 +2173,8 @@ color: rgb(255, 255, 255);</string>
                 <number>0</number>
                </property>
                <widget class="QWidget" name="page_1">
-                <layout class="QVBoxLayout" name="verticalLayout_5">
-                 <item>
+                <layout class="QGridLayout" name="gridLayout">
+                 <item row="0" column="0">
                   <widget class="QLabel" name="label_6">
                    <property name="minimumSize">
                     <size>
@@ -2208,7 +2208,7 @@ background-color: rgb(0, 0, 0);</string>
                    </property>
                   </widget>
                  </item>
-                 <item>
+                 <item row="1" column="0">
                   <layout class="QHBoxLayout" name="horizontalLayout_27">
                    <item>
                     <widget class="QPushButton" name="inspPatternOKBtn">
@@ -2292,7 +2292,7 @@ border-radius: 10px;</string>
                    </item>
                   </layout>
                  </item>
-                 <item>
+                 <item row="2" column="0">
                   <layout class="QHBoxLayout" name="horizontalLayout_75">
                    <item>
                     <widget class="QLabel" name="label_68">
@@ -2408,18 +2408,62 @@ background-color: rgb(0, 0, 0);</string>
                    </item>
                   </layout>
                  </item>
-                 <item>
-                  <spacer name="verticalSpacer_3">
-                   <property name="orientation">
-                    <enum>Qt::Vertical</enum>
-                   </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>20</width>
-                     <height>40</height>
-                    </size>
-                   </property>
-                  </spacer>
+                 <item row="3" column="0">
+                  <layout class="QHBoxLayout" name="horizontalLayout_76">
+                   <item>
+                    <widget class="QPushButton" name="teachCheckOriginBtn">
+                     <property name="minimumSize">
+                      <size>
+                       <width>150</width>
+                       <height>40</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>150</width>
+                       <height>40</height>
+                      </size>
+                     </property>
+                     <property name="font">
+                      <font>
+                       <family>Roboto Condensed</family>
+                       <pointsize>14</pointsize>
+                       <weight>75</weight>
+                       <bold>true</bold>
+                      </font>
+                     </property>
+                     <property name="styleSheet">
+                      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(64, 129, 193);
+border-width: 1px;
+padding: 5px;
+border-radius: 5px;</string>
+                     </property>
+                     <property name="text">
+                      <string>CHECK ORIGIN</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QTableWidget" name="teachOrigintableWidget">
+                     <column>
+                      <property name="text">
+                       <string>X</string>
+                      </property>
+                     </column>
+                     <column>
+                      <property name="text">
+                       <string>Y</string>
+                      </property>
+                     </column>
+                     <column>
+                      <property name="text">
+                       <string>Angle</string>
+                      </property>
+                     </column>
+                    </widget>
+                   </item>
+                  </layout>
                  </item>
                 </layout>
                </widget>
